parser/patternDSLParser.py
# Generated from parser/patternDSL.g4 by ANTLR 4.9
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys




class patternDSLParser ( Parser ):

    grammarFileName = "patternDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'|'", u"'GRID'", u"'RENDER'", u"'R'", 
                     u"'RECT'", u"'E'", u"'ELLIPSE'", u"'T'", u"'TRANSLATE'", 
                     u"'C'", u"'COLOR'", u"'RT'", u"'ROTATE'", u"'RS'", 
                     u"'RADIALSYM'", u"','", u"';'", u"'='", u"'('", u"')'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"COMMA", u"EOC", u"EQ", u"RP", u"LP", u"WS", u"INT", 
                      u"VARNAME" ]

    RULE_start = 0
    RULE_pgrm = 1
    RULE_group = 2
    RULE_groupdef = 3
    RULE_grid = 4
    RULE_render = 5
    RULE_shpcmd = 6
    RULE_shpopts = 7
    RULE_grpcmd = 8

    ruleNames =  [ u"start", u"pgrm", u"group", u"groupdef", u"grid", u"render", 
                   u"shpcmd", u"shpopts", u"grpcmd" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    COMMA=16
    EOC=17
    EQ=18
    RP=19
    LP=20
    WS=21
    INT=22
    VARNAME=23

    def __init__(self, input, output=sys.stdout):
        super(patternDSLParser, self).__init__(input, output=output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(patternDSLParser.StartContext, self).__init__(parent, invokingState)
            self.parser = parser

        def pgrm(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(patternDSLParser.PgrmContext)
            else:
                return self.getTypedRuleContext(patternDSLParser.PgrmContext,i)


        def getRuleIndex(self):
            return patternDSLParser.RULE_start

        def enterRule(self, listener):
            if hasattr(listener, "enterStart"):
                listener.enterStart(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStart"):
                listener.exitStart(self)




    def start(self):

        localctx = patternDSLParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 18
                self.pgrm()
                self.state = 21 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==patternDSLParser.T__2 or _la==patternDSLParser.VARNAME):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PgrmContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(patternDSLParser.PgrmContext, self).__init__(parent, invokingState)
            self.parser = parser

        def render(self):
            return self.getTypedRuleContext(patternDSLParser.RenderContext,0)


        def group(self):
            return self.getTypedRuleContext(patternDSLParser.GroupContext,0)


        def grid(self):
            return self.getTypedRuleContext(patternDSLParser.GridContext,0)


        def getRuleIndex(self):
            return patternDSLParser.RULE_pgrm

        def enterRule(self, listener):
            if hasattr(listener, "enterPgrm"):
                listener.enterPgrm(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPgrm"):
                listener.exitPgrm(self)




    def pgrm(self):

        localctx = patternDSLParser.PgrmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_pgrm)
        try:
            self.state = 26
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 23
                self.render()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 24
                self.group()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 25
                self.grid()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(patternDSLParser.GroupContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(patternDSLParser.VARNAME, 0)

        def EQ(self):
            return self.getToken(patternDSLParser.EQ, 0)

        def groupdef(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(patternDSLParser.GroupdefContext)
            else:
                return self.getTypedRuleContext(patternDSLParser.GroupdefContext,i)


        def EOC(self):
            return self.getToken(patternDSLParser.EOC, 0)

        def RP(self):
            return self.getToken(patternDSLParser.RP, 0)

        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(patternDSLParser.COMMA)
            else:
                return self.getToken(patternDSLParser.COMMA, i)

        def LP(self):
            return self.getToken(patternDSLParser.LP, 0)

        def getRuleIndex(self):
            return patternDSLParser.RULE_group

        def enterRule(self, listener):
            if hasattr(listener, "enterGroup"):
                listener.enterGroup(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGroup"):
                listener.exitGroup(self)




    def group(self):

        localctx = patternDSLParser.GroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_group)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(patternDSLParser.VARNAME)
            self.state = 29
            self.match(patternDSLParser.EQ)
            self.state = 31
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1+1:
                self.state = 30
                self.match(patternDSLParser.RP)


            self.state = 33
            self.groupdef()
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==patternDSLParser.COMMA:
                self.state = 34
                self.match(patternDSLParser.COMMA)
                self.state = 35
                self.groupdef()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1+1:
                self.state = 41
                self.match(patternDSLParser.LP)


            self.state = 44
            self.match(patternDSLParser.EOC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupdefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(patternDSLParser.GroupdefContext, self).__init__(parent, invokingState)
            self.parser = parser

        def RP(self, i=None):
            if i is None:
                return self.getTokens(patternDSLParser.RP)
            else:
                return self.getToken(patternDSLParser.RP, i)

        def shpcmd(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(patternDSLParser.ShpcmdContext)
            else:
                return self.getTypedRuleContext(patternDSLParser.ShpcmdContext,i)


        def LP(self, i=None):
            if i is None:
                return self.getTokens(patternDSLParser.LP)
            else:
                return self.getToken(patternDSLParser.LP, i)

        def shpopts(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(patternDSLParser.ShpoptsContext)
            else:
                return self.getTypedRuleContext(patternDSLParser.ShpoptsContext,i)


        def grpcmd(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(patternDSLParser.GrpcmdContext)
            else:
                return self.getTypedRuleContext(patternDSLParser.GrpcmdContext,i)


        def getRuleIndex(self):
            return patternDSLParser.RULE_groupdef

        def enterRule(self, listener):
            if hasattr(listener, "enterGroupdef"):
                listener.enterGroupdef(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGroupdef"):
                listener.exitGroupdef(self)




    def groupdef(self):

        localctx = patternDSLParser.GroupdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_groupdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(patternDSLParser.RP)
            self.state = 47
            self.shpcmd()
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << patternDSLParser.T__7) | (1 << patternDSLParser.T__8) | (1 << patternDSLParser.T__9) | (1 << patternDSLParser.T__10) | (1 << patternDSLParser.T__11) | (1 << patternDSLParser.T__12))) != 0):
                self.state = 48
                self.shpopts()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==patternDSLParser.T__0:
                self.state = 54
                self.match(patternDSLParser.T__0)
                self.state = 55
                self.shpcmd()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << patternDSLParser.T__7) | (1 << patternDSLParser.T__8) | (1 << patternDSLParser.T__9) | (1 << patternDSLParser.T__10) | (1 << patternDSLParser.T__11) | (1 << patternDSLParser.T__12))) != 0):
                    self.state = 56
                    self.shpopts()
                    self.state = 61
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.match(patternDSLParser.LP)
            self.state = 68
            self.match(patternDSLParser.RP)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << patternDSLParser.T__11) | (1 << patternDSLParser.T__12) | (1 << patternDSLParser.T__13) | (1 << patternDSLParser.T__14))) != 0):
                self.state = 69
                self.grpcmd()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(patternDSLParser.LP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GridContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(patternDSLParser.GridContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self, i=None):
            if i is None:
                return self.getTokens(patternDSLParser.VARNAME)
            else:
                return self.getToken(patternDSLParser.VARNAME, i)

        def EQ(self):
            return self.getToken(patternDSLParser.EQ, 0)

        def INT(self, i=None):
            if i is None:
                return self.getTokens(patternDSLParser.INT)
            else:
                return self.getToken(patternDSLParser.INT, i)

        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(patternDSLParser.COMMA)
            else:
                return self.getToken(patternDSLParser.COMMA, i)

        def EOC(self):
            return self.getToken(patternDSLParser.EOC, 0)

        def getRuleIndex(self):
            return patternDSLParser.RULE_grid

        def enterRule(self, listener):
            if hasattr(listener, "enterGrid"):
                listener.enterGrid(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGrid"):
                listener.exitGrid(self)




    def grid(self):

        localctx = patternDSLParser.GridContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_grid)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(patternDSLParser.VARNAME)
            self.state = 78
            self.match(patternDSLParser.EQ)
            self.state = 79
            self.match(patternDSLParser.T__1)
            self.state = 80
            self.match(patternDSLParser.INT)
            self.state = 81
            self.match(patternDSLParser.COMMA)
            self.state = 82
            self.match(patternDSLParser.INT)
            self.state = 83
            self.match(patternDSLParser.COMMA)
            self.state = 84
            self.match(patternDSLParser.INT)
            self.state = 85
            self.match(patternDSLParser.COMMA)
            self.state = 86
            self.match(patternDSLParser.INT)
            self.state = 87
            self.match(patternDSLParser.COMMA)
            self.state = 88
            self.match(patternDSLParser.INT)
            self.state = 89
            self.match(patternDSLParser.COMMA)
            self.state = 90
            self.match(patternDSLParser.VARNAME)
            self.state = 91
            self.match(patternDSLParser.EOC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RenderContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(patternDSLParser.RenderContext, self).__init__(parent, invokingState)
            self.parser = parser

        def RP(self):
            return self.getToken(patternDSLParser.RP, 0)

        def VARNAME(self, i=None):
            if i is None:
                return self.getTokens(patternDSLParser.VARNAME)
            else:
                return self.getToken(patternDSLParser.VARNAME, i)

        def LP(self):
            return self.getToken(patternDSLParser.LP, 0)

        def EOC(self):
            return self.getToken(patternDSLParser.EOC, 0)

        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(patternDSLParser.COMMA)
            else:
                return self.getToken(patternDSLParser.COMMA, i)

        def getRuleIndex(self):
            return patternDSLParser.RULE_render

        def enterRule(self, listener):
            if hasattr(listener, "enterRender"):
                listener.enterRender(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRender"):
                listener.exitRender(self)




    def render(self):

        localctx = patternDSLParser.RenderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_render)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(patternDSLParser.T__2)
            self.state = 94
            self.match(patternDSLParser.RP)
            self.state = 95
            self.match(patternDSLParser.VARNAME)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==patternDSLParser.COMMA:
                self.state = 96
                self.match(patternDSLParser.COMMA)
                self.state = 97
                self.match(patternDSLParser.VARNAME)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(patternDSLParser.LP)
            self.state = 104
            self.match(patternDSLParser.EOC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShpcmdContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(patternDSLParser.ShpcmdContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return patternDSLParser.RULE_shpcmd

     
        def copyFrom(self, ctx):
            super(patternDSLParser.ShpcmdContext, self).copyFrom(ctx)



    class RectContext(ShpcmdContext):

        def __init__(self, parser, ctx): # actually a patternDSLParser.ShpcmdContext)
            super(patternDSLParser.RectContext, self).__init__(parser)
            self.copyFrom(ctx)

        def INT(self, i=None):
            if i is None:
                return self.getTokens(patternDSLParser.INT)
            else:
                return self.getToken(patternDSLParser.INT, i)
        def COMMA(self):
            return self.getToken(patternDSLParser.COMMA, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterRect"):
                listener.enterRect(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRect"):
                listener.exitRect(self)


    class EllipseContext(ShpcmdContext):

        def __init__(self, parser, ctx): # actually a patternDSLParser.ShpcmdContext)
            super(patternDSLParser.EllipseContext, self).__init__(parser)
            self.copyFrom(ctx)

        def INT(self, i=None):
            if i is None:
                return self.getTokens(patternDSLParser.INT)
            else:
                return self.getToken(patternDSLParser.INT, i)
        def COMMA(self):
            return self.getToken(patternDSLParser.COMMA, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterEllipse"):
                listener.enterEllipse(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitEllipse"):
                listener.exitEllipse(self)



    def shpcmd(self):

        localctx = patternDSLParser.ShpcmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_shpcmd)
        self._la = 0 # Token type
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [patternDSLParser.T__3, patternDSLParser.T__4]:
                localctx = patternDSLParser.RectContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                _la = self._input.LA(1)
                if not(_la==patternDSLParser.T__3 or _la==patternDSLParser.T__4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 107
                self.match(patternDSLParser.INT)
                self.state = 108
                self.match(patternDSLParser.COMMA)
                self.state = 109
                self.match(patternDSLParser.INT)
                pass
            elif token in [patternDSLParser.T__5, patternDSLParser.T__6]:
                localctx = patternDSLParser.EllipseContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                _la = self._input.LA(1)
                if not(_la==patternDSLParser.T__5 or _la==patternDSLParser.T__6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 111
                self.match(patternDSLParser.INT)
                self.state = 112
                self.match(patternDSLParser.COMMA)
                self.state = 113
                self.match(patternDSLParser.INT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShpoptsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(patternDSLParser.ShpoptsContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return patternDSLParser.RULE_shpopts

     
        def copyFrom(self, ctx):
            super(patternDSLParser.ShpoptsContext, self).copyFrom(ctx)



    class ShapesetcolorContext(ShpoptsContext):

        def __init__(self, parser, ctx): # actually a patternDSLParser.ShpoptsContext)
            super(patternDSLParser.ShapesetcolorContext, self).__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(patternDSLParser.INT, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterShapesetcolor"):
                listener.enterShapesetcolor(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitShapesetcolor"):
                listener.exitShapesetcolor(self)


    class ShaperotateContext(ShpoptsContext):

        def __init__(self, parser, ctx): # actually a patternDSLParser.ShpoptsContext)
            super(patternDSLParser.ShaperotateContext, self).__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(patternDSLParser.INT, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterShaperotate"):
                listener.enterShaperotate(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitShaperotate"):
                listener.exitShaperotate(self)


    class ShapetranslateContext(ShpoptsContext):

        def __init__(self, parser, ctx): # actually a patternDSLParser.ShpoptsContext)
            super(patternDSLParser.ShapetranslateContext, self).__init__(parser)
            self.copyFrom(ctx)

        def INT(self, i=None):
            if i is None:
                return self.getTokens(patternDSLParser.INT)
            else:
                return self.getToken(patternDSLParser.INT, i)
        def COMMA(self):
            return self.getToken(patternDSLParser.COMMA, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterShapetranslate"):
                listener.enterShapetranslate(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitShapetranslate"):
                listener.exitShapetranslate(self)



    def shpopts(self):

        localctx = patternDSLParser.ShpoptsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_shpopts)
        self._la = 0 # Token type
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [patternDSLParser.T__7, patternDSLParser.T__8]:
                localctx = patternDSLParser.ShapetranslateContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                _la = self._input.LA(1)
                if not(_la==patternDSLParser.T__7 or _la==patternDSLParser.T__8):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 117
                self.match(patternDSLParser.INT)
                self.state = 118
                self.match(patternDSLParser.COMMA)
                self.state = 119
                self.match(patternDSLParser.INT)
                pass
            elif token in [patternDSLParser.T__9, patternDSLParser.T__10]:
                localctx = patternDSLParser.ShapesetcolorContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                _la = self._input.LA(1)
                if not(_la==patternDSLParser.T__9 or _la==patternDSLParser.T__10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 121
                self.match(patternDSLParser.INT)
                pass
            elif token in [patternDSLParser.T__11, patternDSLParser.T__12]:
                localctx = patternDSLParser.ShaperotateContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 122
                _la = self._input.LA(1)
                if not(_la==patternDSLParser.T__11 or _la==patternDSLParser.T__12):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 123
                self.match(patternDSLParser.INT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrpcmdContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(patternDSLParser.GrpcmdContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return patternDSLParser.RULE_grpcmd

     
        def copyFrom(self, ctx):
            super(patternDSLParser.GrpcmdContext, self).copyFrom(ctx)



    class GrouprotateContext(GrpcmdContext):

        def __init__(self, parser, ctx): # actually a patternDSLParser.GrpcmdContext)
            super(patternDSLParser.GrouprotateContext, self).__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(patternDSLParser.INT, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterGrouprotate"):
                listener.enterGrouprotate(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGrouprotate"):
                listener.exitGrouprotate(self)


    class GroupradialsymContext(GrpcmdContext):

        def __init__(self, parser, ctx): # actually a patternDSLParser.GrpcmdContext)
            super(patternDSLParser.GroupradialsymContext, self).__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(patternDSLParser.INT, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterGroupradialsym"):
                listener.enterGroupradialsym(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGroupradialsym"):
                listener.exitGroupradialsym(self)



    def grpcmd(self):

        localctx = patternDSLParser.GrpcmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_grpcmd)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [patternDSLParser.T__11, patternDSLParser.T__12]:
                localctx = patternDSLParser.GrouprotateContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                _la = self._input.LA(1)
                if not(_la==patternDSLParser.T__11 or _la==patternDSLParser.T__12):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 127
                self.match(patternDSLParser.INT)
                pass
            elif token in [patternDSLParser.T__13, patternDSLParser.T__14]:
                localctx = patternDSLParser.GroupradialsymContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                _la = self._input.LA(1)
                if not(_la==patternDSLParser.T__13 or _la==patternDSLParser.T__14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 129
                self.match(patternDSLParser.INT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





